@@ -1,33 +1,27 @@
-# Template JavaFX
-
-Ce template permet de développer et de lancer une application JavaFX. La bibliothèque JavaFX est automatiquement téléchargée.
+# Projet compilation
 
 ## Compiler/lancer le projet
 
-Compiler le projet :
+Générer la grammaire avec Antlr4 :
 
 ```bash
-./gradlew build
+make grammar
+```
+
+Compiler le Java :
+
+```bash
+make java
+```
+
+Compiler l'intégralité du projet :
+
+```bash
+make all
 ```
 
 Lancer le projet :
 
 ```bash
 ./gradlew run
-```
-
-## Lire des fichiers/images
-
-Pour utiliser utiliser un fichier (image, texte...) depuis Java, placez-le dans le dossier `resources` et accèdez-y via `/nomdufichier`.
-
-## Compiler fichier .jar
-
-```bash
-./gradlew buildJar
-```
-
-Pour lancer le fichier :
-
-```bash
-java  --module-path PATH/TO/JAVAFX --add-modules javafx.controls,javafx.base,javafx.graphics,javafx.web,javafx.swing,javafx.media -jar build/libs/<projectname>-all.jar
 ```
